unpackaged/main/default/objects/SpringCMEos__Environment__c/SpringCMEos__Environment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Spring CM Environments</description>
    <label>Environment</label>
</CustomObject>