unpackaged/main/default/objects/SpringCMEos__Environment__c/fields/SpringCMEos__Env_Prefix__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Env_Prefix__c</fullName>
    <description>Environment prefix</description>
    <label>Environment Prefix</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>