unpackaged/main/default/objects/SpringCMEos__Environment__c/fields/SpringCMEos__Environment_Selected__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Environment_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Environment selected is the SpringCM environment that you are using</description>
    <label>Environment Selected</label>
    <type>Checkbox</type>
</CustomField>