unpackaged/main/default/objects/SpringCMEos__Environment__c/fields/SpringCMEos__Integration_User_Email__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Integration_User_Email__c</fullName>
    <label>Integration User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>