unpackaged/main/default/objects/SpringCMEos__Environment__c/fields/SpringCMEos__SpringCM_REST_URL__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__SpringCM_REST_URL__c</fullName>
    <label>SpringCM REST URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>